--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "0.3.6-beta.1",
-    "js-yaml": "^4.1.0"
+    "@start9labs/start-sdk": "0.3.6-beta.4",
+    "bitcoind-startos": "git+https://github.com/Start9Labs/hello-world-startos.git#97bd511194a57131c48b4b17c06b30262e682b8e"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
-    "@types/js-yaml": "^4.0.5",
     "@vercel/ncc": "^0.38.1",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3"
