--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "0.3.6-beta.6",
-    "bitcoind-startos": "git+https://github.com/Start9Labs/hello-world-startos.git#97bd511194a57131c48b4b17c06b30262e682b8e"
+    "@start9labs/start-sdk": "0.3.6-beta.9",
+    "bitcoind-startos": "git+https://github.com:Start9Labs/bitcoind-startos.git#0538a8009dabf6952094369a359a44887d9c0f2f"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
